# RAG

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
docs/: architecture.md
pages/: 1_Admin.py
src/rag_pdf/: __init__.py  bootstrap.py  config.py  main.py
src/rag_pdf/application/: analysis.py  services.py
src/rag_pdf/domain/: models.py  ports.py
src/rag_pdf/infrastructure/catalog/: plan_catalog.py
src/rag_pdf/infrastructure/chunking/: layout_chunker.py
src/rag_pdf/infrastructure/embeddings/: stub_embeddings.py
src/rag_pdf/infrastructure/evaluation/: evaluation_registry.py  evaluator.py
src/rag_pdf/infrastructure/generation/: grounded_generator.py
src/rag_pdf/infrastructure/parsers/: pymupdf_parser.py  stub_pdf_parser.py
src/rag_pdf/infrastructure/prompts/: prompt_registry.py
src/rag_pdf/infrastructure/retrieval/: in_memory_index.py  sqlite_hybrid_index.py
src/rag_pdf/tools/: generate_sample_plan.py
tests/: test_services.py
